kubernates files/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: file-services
  labels:
    app.kubernetes.io/name: file-services
spec:
  serviceName: file-services
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: file-services
  template:
    metadata:
      labels:
        app.kubernetes.io/name: file-services
    spec:
      containers:
        - name: file-upload-service
          image: trial/file-services 
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-data
              mountPath: /file-services
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
            requests:
              cpu: 10m
              memory: 500Mi
        - name: file-process-service
          image: trial/file-services 
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-data
              mountPath: /file-services
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
            requests:
              cpu: 10m
              memory: 500Mi
      volumes:
        - name:  shared-data
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: shared-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
