kubernates files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: file-services
  labels:
    app.kubernetes.io/name: file-services
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: file-services
